# ophyd-service

./: .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: integration.yml  lint.yml  queueserver-tests.yml  unit-tests.yml
backend/configuration_service/: Dockerfile  pyproject.toml
backend/direct_control_service/: Dockerfile  README.md  pyproject.toml
backend/presets_service/: Dockerfile  README.md  pyproject.toml
backend/presets_service/src/presets_service/: __init__.py  cli.py  main.py  models.py  settings.py  store.py
backend/presets_service/tests/: conftest.py  test_presets_api.py
backend/queueserver_service/: .test_durations  Dockerfile  README.md  pyproject.toml  requirements-dev.txt
docs/: frontend-backend-integration.html  ios-profile-collection-reference.md  scan-buttons-explained.md
docs/orientation/: index.html
frontend/: Containerfile  Dockerfile  package-lock.json  package.json  server.js  tailwind.config.js  vite.config.ts
frontend/scripts/: generate-types.sh
frontend/src/: App.tsx  entry-client.tsx  entry-server.tsx  index.css  main.tsx
integration/: README.md
integration/exercise/: _exerciser_lib.sh  configuration_service.sh  configuration_service_ios.sh  direct_control.sh  direct_control_ws.py  registry_roundtrip.sh
integration/happi/: happi_db.json
integration/interface/: test_devices_contract.py
integration/ioc/: ioc_ios_feedback.py  ioc_ios_scaler.py  (+1 more)
ioc/: Dockerfile
seed/: seed-pvs.sh
shared-schema/: configuration_service.openapi.json  direct_control.openapi.json  queueserver_service.openapi.json
(+170 files in other folders)
