[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bluesky-presets-service"
version = "0.1.0"
description = "Presets Service — per-beamline edge preset storage for scan parameters, detector settings, and EPU configuration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Bluesky Remote Architecture Team"}
]
keywords = ["bluesky", "presets", "beamline", "xas"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.2.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]

[project.scripts]
bluesky-presets-service = "presets_service.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/presets_service"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--strict-markers"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]
